<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="zed_ehd_version">Version #</string>
    <string name="zed_ehd_created_on">Created on: </string>
    <string name="zed_ehd_user">User: </string>
    <string name="zed_ehd_changeset">Changeset: </string>
    <string name="zed_ehd_source">Source: </string>
    <string name="zed_ehd_imagery">Imagery: </string>
    <string name="zed_ehd_version_text">Ver</string>
    <string name="zed_ehd_version_a">A</string>
    <string name="zed_ehd_version_b">B</string>
    <string name="zed_ehd_user_text">User</string>
    <string name="zed_ehd_date_text">Date</string>
    <string name="zed_ehd_compare_text">Compare</string>
    <string name="zed_ehd_exit_text">Exit</string>
    <string name="zed_ehd_none">(none)</string>
    <string name="zed_ehd_relation_object_notation">%s %s</string>
    <string name="zed_ehd_empty_field">-</string>
    <string name="zed_ehd_key_text">KEY</string>
    <string name="zed_ehd_no_text">NO.</string>
    <string name="zed_ehd_role_text">ROLE</string>
    <string name="zed_ehd_object_text">OBJECT</string>
    <string name="zed_ehd_nodes_text">NODES</string>
    <string name="zed_ehd_go_back">Go Back</string>
    <string name="zed_ehd_selected_unknown_error">Unknown error</string>
    <string name="zed_ehd_selected_element_deleted">The selected element has been deleted</string>
    <string name="zed_ehd_error_with_code">Error: %1$s \ncode: %2$d</string>
    <string name="zed_ehd_error">Error: %1$s</string>
    <string name="zed_ehd_select_a_b_toast">Select version A &amp; B for comparison</string>
    <string name="zed_ehd_element_comparison_title">Element Comparison</string>
</resources>